Issue #2978 - Add module-info to relevant Jetty modules.
Added module-info to http2-hpack.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>